--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -902,6 +902,10 @@ cite {
 }
 
 body.home {
+  background: #9089E5;
+}
+
+.homepage-gradient {
   background: #9089E5 linear-gradient(#052F5F, #9089E5 100%) 0 0 no-repeat scroll;
 }
 
@@ -982,7 +986,7 @@ body.home {
 
 .homepage-projects {
   background: transparent url(/img/confetti-bottom.png) center bottom repeat-x scroll;
-  padding: 100px 0;
+  padding: 100px 0 230px;
 }
 
 .proj {
